[package]
name = "simblock"
version = "0.1.0"
edition = "2021"
description = "Discrete-event blockchain P2P network simulator"
license = "Apache-2.0"
repository = "https://github.com/dsg-titech/simblock"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[[bin]]
name = "simblock"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
